# model-studio

./: .gitignore  README.md
icc.modelstudio/: Makefile  buildout.cfg  requirements.txt  setup.py
icc.modelstudio/src/icc/modelstudio/: __init__.py
icc.modelstudio/src/tests/: test_basic.py
ui/: Makefile  application_window.glade  application_window.glade~  model_studio.gresource.xml
vala/: Makefile  application_window.glade  meson.build  meson_options.txt  model_studio  model_studio-test.vala  model_studio.c  model_studio.vala  resources.c
